[metadata]
name = icecube_tools
description = Python tools
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cescalara/icecube_tools
author_email = capel.francesca@gmail.com
author = Francesca Capel
requires_python = >=3.0

project_urls =
    Bug Tracker = https://github.com/cescalara/icecube_tools/issues
    Source Code = https://github.com/cescalara/icecube_tools

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    iminuit
    jupytext
    requests_cache
    requests
    bs4
    tqdm
    versioneer
    vMF
    pandas
    h5py

tests_require =
    pytest
    pytest-cov

[versioneer]
VCS=git
style=pep440
versionfile_source=icecube_tools/_version.py
versionfile_build=icecube_tools/_version.py
tag_prefix=v
parentdir_prefix=icecube_tools-
